--- a/index.html
+++ b/index.html
@@ -1,2 +1,2 @@
-
+<div><img width="50" src="/google-1015752_1280.png">搜尋</div>
 <iframe src="https://cse.google.com/cse?cx=017250100075757845262:ngixjzmuab8"></iframe>
