--- a/index.html
+++ b/index.html
@@ -1,2 +1,3 @@
 <div><img width="50" src="https://charlie-moomoo.github.io/browser-homepage/google-1015752_1280.png">搜尋</div>
-<iframe src="https://cse.google.com/cse?cx=017250100075757845262:ngixjzmuab8"></iframe>
+<script async src="https://cse.google.com/cse.js?cx=017250100075757845262:ngixjzmuab8"></script>
+<div class="gcse-searchbox-only"></div>
